syntax="proto3";

package proto_buf;

// contain only standard scalar data types
message SmallMessage {
  int32 test_int32 = 1;
  int64 test_int64 = 2;
  float test_float = 3;
  double test_double = 4;
  bool test_bool = 5;
  bytes test_bytes = 6;
  string test_string = 7;
}

// contain integers array and nested SmallMessage structure
message MediumMessage {
  int32 test_int32 = 1;
  int64 test_int64 = 2;
  float test_float = 3;
  double test_double = 4;
  bool test_bool = 5;
  bytes test_bytes = 6;
  string test_string = 7;
  repeated int64 test_int_array = 8;
  SmallMessage nested = 9;
}

message LargeMessage {
  repeated MediumMessage mediumNestedStructure = 1;
  repeated SmallMessage smallNestedStructure = 2;
  string test_string = 3;
  bytes test_bytes = 4;
}
